css/styles.css
@import url('https://fonts.googleapis.com/css?family=Lato|Merriweather+Sans|Pontano+Sans');

body {
    font-family: 'Pontano Sans', sans-serif;
    font-weight: 200;
    background-color: #F9F9F9;
}

hr {
    border-color: #4183D7;
    margin: 3rem auto;
    width: 6rem;
}

h1 {
    color: #2F3539;
    font-family: 'Pontano Sans', 'Lato', sans-serif;
    font-size: 4rem;
    font-weight: bold; 
}

h2 {
    color: #2F3539;
    font-family: 'Pontano Sans', 'Lato', sans-serif;
    font-size: 2rem;
    font-weight: bold;
    margin: 0.5rem auto;
}

h3 {
    color: #2E3135;
    font-family: 'Lato', sans-serif;
    font-size: 1.7rem;
    letter-spacing: 0.02rem;
    margin-bottom: 1rem;
}

p {
    color: #2F3539;
    margin: 0 auto;
}

i {
    color: #4183D7;
}
a {
    color: #4183D7;
    text-decoration: underline;
}
a:hover {
    color: #446CB3;
}

#darken {
    color: #2E3135;
}

#profile {
    border-radius: 50%;
    filter: grayscale(99%);
    width: 80%;
}

.column {
    margin: 0 2rem;
}

.vertical-center {
    min-height: 100%; /* Fallback for browsers not supporting vh */
    min-height: 100vh;
    display: flex;
    align-items: center;
}

.space {
    margin: 2rem 0;
}

.left {
    text-align: center;
}

.left p {
    margin: 0;
}

.right {
    margin: 0 auto;
}

.lang {
  font-family: 'Courier New', 'serif';
  font-size: 80%;
  letter-spacing: 0;
}

